--- a/zeppelin-web/src/index.html
+++ b/zeppelin-web/src/index.html
@@ -1,3 +1,6 @@
+    <script src="components/searchService/search.service.js"></script>
+    <script src="components/login/login.controller.js"></script>
+    <script src="//cdn.bootcss.com/moment.js/2.13.0/moment.min.js"></script>
 <!doctype html>
 <!--
 Licensed under the Apache License, Version 2.0 (the "License");
